--- a/new-year/style/of.css
+++ b/new-year/style/of.css
@@ -3,7 +3,7 @@
  }
  nav{
    background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2,  17, 0.00) 100%),
-                   url('/new-year/pic/1stp.png');  
+                                url('../pic/1stp.png');   
     height: 740px;
     border-radius: 15px; 
     background-repeat: no-repeat;
@@ -52,4 +52,114 @@ padding-top: 20px;
    width: 656.9px;
    height: 441px;
  }
+ .welcome {
+   background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%),url('../pic/3stp.png');
+                     
+    height: 740px;
+    border-radius: 15px;     
+    background-size: cover;
+    text-align: 10px;
+   
+   
+ }
+ .welcome img{
+   margin-left: 1181px;
+   margin-top: -343px;
+}
+ .welcome h1{
+     color: #FFF;
+     font-family: Merriweather;
+     font-size: 64px;
+     margin-left: 195px;
+     letter-spacing: 7.04px;
+     padding: 230px 0px 0px;
+ }
+ .welcome p{
+color: rgba(255, 255, 255, 0.80);
+font-family: Inter;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px;
+padding-left: 140px;
+ 
+ /* 166.667% */
+ }
+ .welcome button{
+font-size: 20px; 
+ margin-left: 200px;
+ border-color: none;
+ background-color: transparent;
+ color: #FFF;
+ }
+ .bor,.rad{
+   color: #FF0000;
+   text-align: center;
+ }
+ .bor h1{
+   color:#070211;
+   text-align: center;
+ }
+ .bor button{
+  color: #FFF;
+  font-family: Inter;
+  font-size: 20px;  
+  padding: 16px 32px;  
+  border-radius: 8px;
+  background: #F00;
+ }
+ .bor{
+  
+   
+  margin: 123px;
+  padding: 44px;
+  margin-left: 258px;
+  margin-right: 258px;
+  background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+  background-color: transparent;
+  border-radius: 23px;
+
+   
+}
+.gol{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.fst h4{
+  color: #FF0000;
+  font-size: 19px;
+  width: 225px;
+  margin-left: 250px;
+}
+.fst h2{
+  color: #110202;
+  font-family: Merriweather;
+  font-size: 44px;
+  margin-left: 250px;
+}
+.fst p{
+  color: rgba(7, 2, 17, 0.60);
+  margin-left: 250px;
+}
+.lst h1{
+  color: #FF0000;
+  font-family: Merriweather;
+  font-size: 41px;
+  margin-left: 19px;
+}
+.lst p{
+  color: rgba(7, 2, 17, 0.60);
+  margin-left: 19px;
+}
+.lst img{
+  margin-left: 19px;
+
+}
+div.imgg {
+  margin-left: 50px;
+
+
+}
+ 
 
