--- a/new-year/style/of.css
+++ b/new-year/style/of.css
@@ -130,17 +130,17 @@ font-size: 20px;
   color: #FF0000;
   font-size: 19px;
   width: 225px;
-  margin-left: 250px;
+  margin-left: 209px;
 }
 .fst h2{
   color: #110202;
   font-family: Merriweather;
   font-size: 44px;
-  margin-left: 250px;
+  margin-left: 209px;
 }
 .fst p{
   color: rgba(7, 2, 17, 0.60);
-  margin-left: 250px;
+  margin-left: 209px;
 }
 .lst h1{
   color: #FF0000;
@@ -158,8 +158,56 @@ font-size: 20px;
 }
 div.imgg {
   margin-left: 50px;
-
+}
+.holidays{
+  justify-content: center;
+  align-items: center;
+}
+.text h3{
+color: #F00;
+font-family: Inter;
+font-size: 14px;
+margin-left: 317px;
 
 }
+.text h1{
+color: #070211;
+font-family: Merriweather; 
+font-size: 24px;
+margin-top: -16px;
+margin-left: 317px;
+
+}
+.text p{
+color: rgba(7, 2, 17, 0.60);
+font-family: Inter;
+font-size: 12px;
+margin-top: -13px;
+margin-left: 317px;
+
+}
+.photo{  
+margin-left: 287px;  
+flex-direction: row;
+justify-content: center;
+.p{
+  width: 310px;
+  margin: 0 10px 0 10px;
+  margin-top: 15px;
+  transition: background 0.3s ease-in-out;
+  
+}
+.p img{
+  display: block;
+  width: 100%;
+  border-radius: 5px;
+}
+}
+.photo:hover {
+  background: url(<path-to-image>), rgb(0, 0, 0) 0px -35.755px / 100% 142.115% no-repeat;
+  border-radius: 16px
+
+}
+ 
  
 
